--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.1.0",
+    "element-plus": "^2.3.6",
     "pinia": "^2.0.36",
     "sass": "^1.63.3",
     "vue": "^3.3.2",
